--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,12 @@
 <footer>
 <nav>
 <ul>
-  {% for item in site.data.navigation.secondary %}
-    <a href="{{ site.baseurl }}{{ item.url }}">
-      <li>{{ item.text}}</li>
-    </a>
-  {% endfor %}
+    {% for item in site.data.navigation.primary %}
+    <a href="{{ site.baseurl }}{{ item.url }}"><li>{{ item.text}}</li></a>
+    {% endfor %}
+    {% for item in site.data.navigation.secondary %}
+    <a href="{{ site.baseurl }}{{ item.url }}"><li>{{ item.text}}</li></a>
+    {% endfor %}
 </ul>
 </nav>
 
